# stemka

./: CMakeLists.txt  LICENSE  stemka.html
convert/: CMakeLists.txt
dev/cz/: CMakeLists.txt  CzechStemmer.php  Makefile  checkchz.cpp  fuzzychz.inc
example/: CMakeLists.txt
